# Techniker_23-24_Array-Uebung-6

./: CMakeLists.txt  main.c
